Pull request #1227: fix asking for stealth mode
Merge in EXTENSIONS/browser-extension to master

Squashed commit of the following:

commit 2e88a2abf2be46132337df4b5754350a634b09ef
Merge: 559b45749 f7e1cdb69
Author: Anton <a.kaprielov@adguard.com>
Date:   Tue Mar 29 11:39:54 2022 +0300

    AG-13094 merge

commit 559b4574915f3aec80c595d1c12fa567b4c54515
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Mar 28 15:45:48 2022 +0300

    AG-13094 fix asking for stealth mode

--- a/Extension/src/pages/options/styles/button.pcss
+++ b/Extension/src/pages/options/styles/button.pcss
@@ -18,6 +18,7 @@
     &--m {
         padding: 0 35px;
         height: 40px;
+        line-height: 40px;
         border-radius: 8px;
         font-size: 16px;
     }
